--- a/games.html
+++ b/games.html
@@ -33,7 +33,8 @@
                 { name: "Red vs Blue 2", url: "red v blue/definetlynotcode.html"},
                 { name: "OvO", url: "OvO/just_some-schoolwork.html"},
                 { name: "Stunt Cars", url: "Stunt Cars/ahhh_why_am_i-htmlcode.html"},
-                { name: "Bitlife", url: "Bitlife/iguess-imdestined-to-a-life-of-of-horrible-crime.html"},                
+                { name: "Bitlife", url: "Bitlife/iguess-imdestined-to-a-life-of-of-horrible-crime.html"},
+                { name: "Granny", url: "Granny/poppqa.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
