--- a/chat.html
+++ b/chat.html
@@ -33,9 +33,9 @@
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
-    let mutedUsers = JSON.parse(localStorage.getItem("mutedUsers")) || {}; // Store muted users
+    let mutedUsers = {}; // Stores globally muted users
     const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"]; // Mods
-    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; // Devs (including Head Dev)
+    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; // Devs
 
     function signIn() {
         const email = prompt("Enter your email:");
@@ -68,14 +68,18 @@
         }
 
         // **Check if user is muted before sending**
-        if (mutedUsers[email] && Date.now() < mutedUsers[email]) {
+        if (mutedUsers[email]) {
             alert("You are muted and cannot send messages.");
             return;
         }
 
-        // **Handle mute command**
+        // **Handle mute/unmute commands**
         if (messageInput.startsWith("/mute")) {
             handleMuteCommand(messageInput);
+            return;
+        }
+        if (messageInput.startsWith("/unmute")) {
+            handleUnmuteCommand(messageInput);
             return;
         }
 
@@ -107,18 +111,37 @@
             return;
         }
 
-        mutedUsers[emailToMute] = Date.now() + 15 * 60 * 1000; // Mute expires in 15 minutes
-        localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); // Save to storage
+        mutedUsers[emailToMute] = true; // Mark user as muted
+        alert(`${emailToMute} has been muted.`);
+        channel.publish("mute", { user: emailToMute }); // Notify everyone in chat
+    }
 
-        alert(`${emailToMute} has been muted for 15 minutes.`);
-        channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
+    function handleUnmuteCommand(message) {
+        const email = sessionStorage.getItem("userEmail");
+        if (!email) return;
 
-        // Auto-unmute after 15 minutes
-        setTimeout(() => {
-            delete mutedUsers[emailToMute];
-            localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); // Update storage
-            channel.publish("message", { text: `${emailToMute} is now unmuted.`, user: "System", username: "System" });
-        }, 15 * 60 * 1000);
+        // **Only Mods, Devs, and Head Dev can unmute**
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+            alert("You do not have permission to unmute users.");
+            return;
+        }
+
+        const messageParts = message.split(" ");
+        if (messageParts.length < 2) {
+            alert("Usage: /unmute <email>");
+            return;
+        }
+
+        const emailToUnmute = messageParts[1];
+
+        if (!emailToUnmute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        delete mutedUsers[emailToUnmute]; // Remove user from mute list
+        alert(`${emailToUnmute} has been unmuted.`);
+        channel.publish("unmute", { user: emailToUnmute }); // Notify everyone
     }
 
     function loadMessages() {
@@ -126,10 +149,9 @@
             const data = message.data;
             const chatBox = document.getElementById("chatBox");
 
-            // **Block messages from muted users for everyone**
-            if (mutedUsers[data.user] && Date.now() < mutedUsers[data.user]) {
-                console.log(`Blocked message from muted user: ${data.user}`);
-                return; // Hide message for all users if the user is muted
+            // **Block messages from muted users globally**
+            if (mutedUsers[data.user]) {
+                return; // Hide message for all users
             }
 
             const messageElement = document.createElement("p");
@@ -142,16 +164,9 @@
             if (modEmails.includes(data.user)) {
                 extraStyle = "color: yellow;";
                 roleTag = " <strong>[MOD]</strong>";
-                // Only show email to devs or head dev
-                if (devEmails.includes(sessionStorage.getItem("userEmail"))) {
-                    userEmail = data.user;
-                } else {
+                if (!devEmails.includes(sessionStorage.getItem("userEmail"))) {
                     userEmail = "";
                 }
-            } else if (data.user === "856030@dpsk12.net") {
-                extraStyle = "color: red;";
-                roleTag = " <strong>[HEAD DEV]</strong>";
-                userEmail = "";
             } else if (devEmails.includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
@@ -161,6 +176,15 @@
             messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
+        });
+
+        // **Listen for mute/unmute updates**
+        channel.subscribe("mute", (message) => {
+            mutedUsers[message.data.user] = true;
+        });
+
+        channel.subscribe("unmute", (message) => {
+            delete mutedUsers[message.data.user];
         });
     }
 
