--- a/games.html
+++ b/games.html
@@ -35,6 +35,7 @@
                 { name: "Stunt Cars", url: "Stunt Cars/ahhh_why_am_i-htmlcode.html"},
                 { name: "Bitlife", url: "Bitlife/iguess-imdestined-to-a-life-of-of-horrible-crime.html"},
                 { name: "Granny", url: "Granny/poppqa.html"},
+                { name: "Chicken war", url: "Chicken war/Raise_your_yahhhhh_yah_yahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
