--- a/games.html
+++ b/games.html
@@ -36,7 +36,7 @@
                 { name: "Bitlife", url: "Bitlife/iguess-imdestined-to-a-life-of-of-horrible-crime.html"},
                 { name: "Granny", url: "Granny/poppqa.html"},
                 { name: "Chicken war", url: "Chicken war/Raise_your_yahhhhh_yah_yahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh.html"},
-                { name: "Gangster life", url: "THUG LIFE/I-live-that-thug-life-everyday-im-hustil-with-my-homies.html"},
+                { name: "Gangster life (BTW i live the thug life)", url: "THUG LIFE/I-live-that-thug-life-everyday-im-hustil-with-my-homies.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
