--- a/games.html
+++ b/games.html
@@ -37,6 +37,7 @@
                 { name: "Granny", url: "Granny/poppqa.html"},
                 { name: "Chicken war", url: "Chicken war/Raise_your_yahhhhh_yah_yahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh.html"},
                 { name: "Gangster life (BTW i live the thug life)", url: "THUG LIFE/I-live-that-thug-life-everyday-im-hustil-with-my-homies.html"},
+                { name: "Age of war", url: "Age-of-your grandma/dont-look-at-the-url-you-wont-like-what-you-see.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
