--- a/games.html
+++ b/games.html
@@ -39,6 +39,7 @@
                 { name: "Gangster life (BTW i live the thug life)", url: "THUG LIFE/I-live-that-thug-life-everyday-im-hustil-with-my-homies.html"},
                 { name: "Age of war", url: "Age-of-your grandma/dont-look-at-the-url-you-wont-like-what-you-see.html"},
                 { name: "Snow rider", url: "Snow rider/go-to-secret-boredom-hub-site.onrender.com_____okayyyy-now-coool.html"},
+                { name: "Funny Shooter", url: "Funny shooter/im-done-with-these_friggin_stupid_funny_names_they_all-friggin-suck.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
