--- a/games.html
+++ b/games.html
@@ -40,6 +40,7 @@
                 { name: "Age of war", url: "Age-of-your grandma/dont-look-at-the-url-you-wont-like-what-you-see.html"},
                 { name: "Snow rider", url: "Snow rider/go-to-secret-boredom-hub-site.onrender.com_____okayyyy-now-coool.html"},
                 { name: "Funny Shooter", url: "Funny shooter/im-done-with-these_friggin_stupid_funny_names_they_all-friggin-suck.html"},
+                { name: "Duck life 5", url: "Duck life 5/i-gues-this-is-the-end_of_funny-names.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
