--- a/games.html
+++ b/games.html
@@ -42,6 +42,7 @@
                 { name: "Funny Shooter", url: "Funny shooter/im-done-with-these_friggin_stupid_funny_names_they_all-friggin-suck.html"},
                 { name: "Duck life 5", url: "Duck life 5/i-gues-this-is-the-end_of_funny-names.html"},
                 { name: "Ripoff Stumble Guys", url: "Stumble guys/yeah_just__normal_name-sad-emoji.html"},
+                { name: "Gravity Driver", url: "Gravity driver DEFFYING_GRAVUTYYYY/nothing-to-see-here.html"},
             ];
 
             const gamesList = document.getElementById("games-list");
