--- a/chat.html
+++ b/chat.html
@@ -16,6 +16,7 @@
         <a href="contact.html" target="_blank">Contact</a>   
         <a href="chat.html" target="_blank">Chat</a>
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
+        <a href="partners.html" target="_blank"> Our Partners</a>
     </div>
     <div class="content">
         <h2>Chat Room</h2>
