--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
         <a href="contact.html">Contact</a>
         <a href="chat.html">Chat</a>
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
+        <a href="partners.html" target="_blank"> Our Partners</a>
     </div>
     <div class="content">
         <h1>About Us</h1>
