--- a/games.html
+++ b/games.html
@@ -15,7 +15,7 @@
         <a href="contact.html">Contact</a>
         <a href="chat.html">Chat</a>
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
-        <a href="partners.html" target="_blank"> Our Partners</a>
+        <a href="partners.html" target="_blank">Our Partners</a>
     </div>
     <div class="content">
         <h1>Games</h1>
@@ -44,9 +44,8 @@
                 { name: "Duck life 5", url: "Duck life 5/i-gues-this-is-the-end_of_funny-names.html"},
                 { name: "Ripoff Stumble Guys", url: "Stumble guys/yeah_just__normal_name-sad-emoji.html"},
                 { name: "Gravity Driver", url: "Gravity driver DEFFYING_GRAVUTYYYY/nothing-to-see-here.html"},
-                { name: "Ripoff Slither.io", url: "Slither io ripoff/nothing_you_need_to_care_about_no-one-ever-looks_at_the_url.html"},
-                
-'            ];
+                { name: "Ripoff Slither.io", url: "Slither io ripoff/nothing_you_need_to_care_about_no-one-ever-looks_at_the_url.html"}
+            ];
 
             const gamesList = document.getElementById("games-list");
             games.forEach(game => {
