--- a/Funny shooter/im-done-with-these_friggin_stupid_funny_names_they_all-friggin-suck.html
+++ b/Funny shooter/im-done-with-these_friggin_stupid_funny_names_they_all-friggin-suck.html
@@ -1,6 +1,6 @@
 <html><head><base target="_blank"></head><body><div id="fr" data="<iframe width=&quot;100%&quot; height=&quot;100%&quot; src=&quot;https://test-opensocial.googleusercontent.com/gadgets/ifr?url=https://groups.google.com/u/2/group/smemela-classes/attach/12626905b141f2/fsfs2.xml?part=0.1&amp;view=1&amp;authuser=2&amp;authuser=6&amp;container=ig&quot; frameborder=&quot;0&quot; allowfullscreen></iframe>"><iframe width="100%" height="100%" src="https://YE7yG9u0ru-opensocial.googleusercontent.com/gadgets/ifr?url=https://groups.google.com/u/2/group/smemela-classes/attach/12626905b141f2/fsfs2.xml?part=0.1&amp;view=1&amp;authuser=2&amp;authuser=6&amp;container=ig" frameborder="0" allowfullscreen=""></iframe></div> 
 <button class="c-button" type="button" onclick="PlayTo(this)" style="display: none;">G+</button>
-<div class="bottom-text">Unblocked Games G+</div>
+<div class="bottom-text">Boredom hub</div>
 
 <style>
   .c-button {
