--- a/Chicken war/Raise_your_yahhhhh_yah_yahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh.html
+++ b/Chicken war/Raise_your_yahhhhh_yah_yahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh.html
@@ -1,6 +1,6 @@
 <html><head><base target="_blank"></head><body><div id="fr" data="<iframe width=&quot;100%&quot; height=&quot;100%&quot; src=&quot;https://cladssroom-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/SternyFahizh/RabbitMQ@c56f8a7010e08cba0d629ec7b5570abe2579b0dc/configs%252Frabbitmq/ce.xml&amp;container=ig&quot; frameborder=&quot;0&quot; allowfullscreen></iframe>"><iframe width="100%" height="100%" src="https://cladssroom-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/SternyFahizh/RabbitMQ@c56f8a7010e08cba0d629ec7b5570abe2579b0dc/configs%252Frabbitmq/ce.xml&amp;container=ig" frameborder="0" allowfullscreen=""></iframe></div>
 <button class="c-button" type="button" onclick="PlayTo(this)" style="display: none;">CLICK TO PLAY</button>
-<div class="bottom-text">Unblocked Games G+</div>
+<div class="bottom-text">Boredom hub</div>
 
 <style>
   .c-button {
