--- a/chat.html
+++ b/chat.html
@@ -67,8 +67,108 @@
             return;
         }
 
-        // **Send message**
-        channel.publish("message", { text: messageText, user: email, username: username });
-        messageInput.value = "";
+
+
+
+
+
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8595/8595483.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boredom Hub - Chat</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
+</head>
+<body>
+    <div class="sidebar">
+        <a href="index.html" target="_blank">Home</a>
+        <a href="games.html" target="_blank">Games</a>
+        <a href="about.html" target="_blank">About Us</a>
+        <a href="contact.html" target="_blank">Contact</a>   
+        <a href="chat.html" target="_blank">Chat</a>
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
+        <a href="partners.html" target="_blank"> Our Partners</a>
+    </div>
+    <div class="content">
+        <h2>Chat Room</h2>
+        <p id="authStatus">Not logged in</p>
+        <button onclick="signIn()">Sign In</button>
+        <button onclick="signOut()">Sign Out</button>
+        <br><br>
+        <input type="text" id="usernameInput" placeholder="Enter Username">
+        <input type="text" id="messageInput" placeholder="Type a message">
+        <button onclick="sendMessage()">Send</button>
+        <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
+    </div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const messageInput = document.getElementById("messageInput");
+        if (messageInput) {
+            messageInput.addEventListener("keypress", function(event) {
+                if (event.key === "Enter") {
+                    event.preventDefault(); // Prevent default newline behavior
+                    sendMessage();
+                }
+            });
+        }
+    });
+
+    const ably = new Ably.Realtime("YOUR_ABLY_API_KEY"); // Replace with a valid API key before deployment
+    const channel = ably.channels.get("chat-room");
+
+    let mutedUsers = {}; // Stores globally muted users
+    const modEmails = [ "878197@dpsk12.net", "871341@dpsk12.net"]; // Mods
+    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net","872654@dpsk12.net"]; // Devs
+
+    function signIn() {
+        const email = prompt("Enter your email:");
+        const username = prompt("Enter your username:");
+
+        if (!email || !username) {
+            alert("Email and username are required!");
+            return;
+        }
+
+        sessionStorage.setItem("userEmail", email);
+        sessionStorage.setItem("username", username);
+        document.getElementById("authStatus").innerText = `Logged in as ${email}`;
     }
-</script>
+
+    function signOut() {
+        sessionStorage.removeItem("userEmail");
+        sessionStorage.removeItem("username");
+        document.getElementById("authStatus").innerText = "Not logged in";
+    }
+
+    function sendMessage() {
+        const messageInput = document.getElementById("messageInput");
+        if (!messageInput) return;
+
+        const messageText = messageInput.value.trim();
+        const email = sessionStorage.getItem("userEmail");
+        const username = sessionStorage.getItem("username");
+
+        if (!email || !username) {
+            alert("You must be signed in to send messages.");
+            return;
+        }
+
+        // **Check if user is muted before sending**
+        if (mutedUsers[email]) {
+            alert("You are muted and cannot send messages.");
+            return;
+        }
+
+        // **Handle mute/unmute commands**
+        if (messageText.startsWith("/mute")) {
+            handleMuteCommand(messageText);
+            return;
+        }
+        if (messageText.startsWith("/unmute")) {
+            handleUnmuteCommand(messageText);
+            return;
+        }
