--- a/games.html
+++ b/games.html
@@ -54,7 +54,7 @@
                 { name: "Duck life 5", url: "Duck life 5/i-gues-this-is-the-end_of_funny-names.html"},
                 { name: "Gravity Driver", url: "Gravity driver DEFFYING_GRAVUTYYYY/nothing-to-see-here.html"},
                 { name: "Ripoff Slither.io", url: "Slither io ripoff/nothing_you_need_to_care_about_no-one-ever-looks_at_the_url.html"},
-                { name: "Red vs Blue 1", url: "Red V Blue/hgjhfhhfh.html},
+                { name: "Red vs Blue 1", url: "Red V Blue/hgjhfhhfh.html"},
                 { name: "Retro Bowl", url: "Retro Bowl/nothing.html"},
             ];
 
