--- a/chat.html
+++ b/chat.html
@@ -35,7 +35,7 @@
     const channel = ably.channels.get("chat-room");
 
     let mutedUsers = {}; // Stores globally muted users
-    const modEmails = [ "878197@dpsk12.net", "871341@dpsk12.net"]; // Mods
+    const modEmails = [ "878197@dpsk12.net", "871341@dpsk12.net", "871316@dpsk12.net"]; // Mods
     const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net","872654@dpsk12.net"]; // Devs
 
     function signIn() {
