--- a/features.html
+++ b/features.html
@@ -38,7 +38,7 @@
             }
 
             const games = [
-                { name: "Shrek movie as GIF", url: "shrek.gif" },
+                { name: "Highly pixelated Shrek movie with no audio", url: "shrekmovie.mp4" },
                 { name: "Download app", url: "2048/index.html" },
             ];
 
