--- a/partners.html
+++ b/partners.html
@@ -32,6 +32,7 @@
         <a href="chat.html">Chat</a>
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank">Our Partners</a>
+         <a href="features.html" target="_blank">Our Partners</a>
     </div>
     <div class="content">
         <h1>Partners</h1>
