--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="#" onclick="openInAboutBlank('chat.html')">Chat</a>
         <a href="#" onclick="openInAboutBlank('rabbitAI.html')">rabbitAI calculator</a>
         <a href="#" onclick="openInAboutBlank('partners.html')">Our Partners</a>
+         <a href="features.html" target="_blank">Our Partners</a>
     </div>
     
     <div class="content">
