--- a/chat.html
+++ b/chat.html
@@ -17,6 +17,7 @@
         <a href="chat.html" target="_blank">Chat</a>
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank"> Our Partners</a>
+        <a href="features.html" target="_blank">Features</a>
     </div>
     <div class="content">
         <h2>Chat Room</h2>
