--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="#" onclick="openInAboutBlank('index.html')">Home</a>
-        <a href="#" onclick="openInAboutBlank('games.html')">Games</a>
-        <a href="#" onclick="openInAboutBlank('about.html')">About Us</a>
-        <a href="#" onclick="openInAboutBlank('contact.html')">Contact</a>   
-        <a href="#" onclick="openInAboutBlank('chat.html')">Chat</a>
-        <a href="#" onclick="openInAboutBlank('rabbitAI.html')">rabbitAI calculator</a>
-        <a href="#" onclick="openInAboutBlank('partners.html')">Our Partners</a>
-         <a href="features.html" target="_blank">Our Partners</a>
+       <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+        <a href="chat.html">Chat</a>
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
+        <a href="partners.html" target="_blank">Our Partners</a>
+      <a href="features.html" target="_blank">Features</a>
     </div>
     
     <div class="content">
