--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a href="about.html" onclick="navigate(event, 'about.html')">About Us</a>
         <a href="contact.html" onclick="navigate(event, 'contact.html')">Contact</a>
         <a href="chat.html" onclick="navigate(event, 'chat.html')">Chat</a>
-        <a href="rabbitAI.html">RabbitAI Calculator</a>
-        <a href="partners.html">Our Partners</a>
+        <a href="rabbitAI.html"onclick="navigate(event, 'rabbitAI.html')">RabbitAI Calculator</a>
+        <a href="partners.html"onclick=navigate(event, 'part>Our Partners</a>
         <a href="features.html">Features</a>
     </div>
     
