--- a/features.html
+++ b/features.html
@@ -6,7 +6,8 @@
     <title>Features - Boredom Hub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8595/8595483.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <style>
         .features-container {
             display: flex;
