--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <a href="rabbitAI.html" onclick="navigate(event, 'rabbitAI.html')">RabbitAI Calculator</a>
         <a href="partners.html" onclick="navigate(event, 'partners.html')">Our Partners</a>
         <a href="features.html">Features</a>
+      <div class="sidebar-logo">
+        <img src="path/to/your/logo.png" alt="Boredom Hub Logo">
+    </div>
     </div>
     
     <div class="content" id="main-content">
