--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="partners.html" onclick="navigate(event, 'partners.html')">Our Partners</a>
         <a href="features.html">Features</a>
       <div class="sidebar-logo">
-        <img src="path/to/your/logo.png" alt="Boredom Hub Logo">
+        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo">
     </div>
     </div>
     
