--- a/partners.html
+++ b/partners.html
@@ -34,6 +34,9 @@
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank">Our Partners</a>
          <a href="features.html" target="_blank">Our Partners</a>
+        <div class="sidebar-logo">
+        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo">
+    </div>
     </div>
     <div class="content">
         <h1>Partners</h1>
