--- a/rabbitAI.html
+++ b/rabbitAI.html
@@ -18,7 +18,8 @@
         <a href="partners.html" target="_blank">Our Partners</a>
       <a href="features.html" target="_blank">Features</a>
         <div class="sidebar-logo">
-        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo">
+       <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" class="small-logo">
+
     </div>
     </div>
     
