--- a/about.html
+++ b/about.html
@@ -42,6 +42,10 @@
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank"> Our Partners</a>
         <a href="features.html" target="_blank">Features</a>
+         <div class="sidebar-logo">
+       <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" class="small-logo">
+
+    </div>
     </div>
     <div class="content">
         <h1>About Us</h1>
