--- a/features.html
+++ b/features.html
@@ -48,6 +48,7 @@
     <div class="container">
         <h1>Other features</h1>
         <a href="shrekmovie.mp4" class="btn">highly pixelated shrek movie</a>
+         <a href="bettershrek.html"class="btn"> full normal shrek movie</a>
     </div>
 </body>
 </html>
