--- a/features.html
+++ b/features.html
@@ -49,6 +49,7 @@
         <h1>Other features</h1>
         <a href="shrekmovie.mp4" class="btn">highly pixelated shrek movie</a>
          <a href="bettershrek.html"class="btn"> full normal shrek movie</a>
+         <a href="spiderman2.html"class="btn"> Spider man 2</a>
     </div>
 </body>
 </html>
