--- a/features.html
+++ b/features.html
@@ -46,10 +46,11 @@
         <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" style="width: 150px; margin-top: 20px;">
     </div>
     <div class="container">
-        <h1>Other features (also the legality of this is in question but I think that internet archive movies are legal to watch online if you know otherwise please contact me I dont want to go to prison)</h1>
+        <h1>Other features </h1>
         <a href="shrekmovie.mp4" class="btn">highly pixelated shrek movie</a>
          <a href="bettershrek.html"class="btn"> full normal shrek movie</a>
          <a href="spiderman2.html"class="btn"> Spider man 2</a>
+         <h4> Also please someone tell me the legailty of watching movies on internet archive, im not sure and i don't want to go to prison</h4>
     </div>
 </body>
 </html>
