--- a/games.html
+++ b/games.html
@@ -26,16 +26,8 @@
             <!-- Games will be added here -->
         </div>
         <script>
-            function openInAboutBlank(url) {
-                let newTab = window.open('about:blank', '_blank');
-                fetch(url)
-                    .then(response => response.text())
-                    .then(html => {
-                        newTab.document.open();
-                        newTab.document.write(html);
-                        newTab.document.close();
-                    })
-                    .catch(error => console.error('Error loading game:', error));
+            function openInNewTab(url) {
+                window.open(url, '_blank');
             }
 
             const games = [
@@ -55,7 +47,7 @@
                 { name: "Funny Shooter", url: "Funny shooter/im-done-with-these_friggin_stupid_funny_names_they_all-friggin-suck.html"},
                 { name: "Duck life 5", url: "Duck life 5/i-gues-this-is-the-end_of_funny-names.html"},
                 { name: "Gravity Driver", url: "Gravity driver DEFFYING_GRAVUTYYYY/nothing-to-see-here.html"},
-                { name: "Ripoff Slither.io", url: "Slither io ripoff/nothing_you_need_to_care_about_no-one-ever-looks_at_the_url.html"},
+                { name: "Ripoff Slither.io", url: "Slither io ripoff/nothing_you_need_to_care_about_no-one-ever-looks_at-the_url.html"},
                 { name: "Red vs Blue 1", url: "Red V Blue/hgjhfhhfh.html"},
                 { name: "Retro Bowl", url: "Retro Bowl/nothing.html"}
             ];
@@ -65,7 +57,7 @@
                 const button = document.createElement("button");
                 button.innerText = game.name;
                 button.classList.add("game-button");
-                button.onclick = () => openInAboutBlank(game.url);
+                button.onclick = () => openInNewTab(game.url);
                 gamesList.appendChild(button);
             });
         </script>
