--- a/features.html
+++ b/features.html
@@ -48,9 +48,9 @@
     <div class="container">
         <h1>Other features </h1>
         <a href="shrekmovie.mp4" class="btn">highly pixelated shrek movie</a>
-         <a href="bettershrek.html"class="btn"> full normal shrek movie</a>
-         <a href="spiderman2.html"class="btn"> Spider man 2</a>
-         <h4> Also please someone tell me the legailty of watching movies on internet archive, im not sure and i don't want to go to prison</h4>
+        <a href="streaming.html" class="btn">boredom hub streaming</a> 
+           <a href="downoad.mp4" class="btn">get the app</a>
+        
     </div>
 </body>
 </html>
